--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -64,7 +64,7 @@ jobs:
         id: auth
         uses: 'google-github-actions/auth@v2'
         with:
-          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+          credentials_json: '${{ secrets.GCP_SA_KEY  }}'
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
       # NOTE: Alternative option - authentication via credentials json
@@ -72,7 +72,7 @@ jobs:
       #   id: auth
       #   uses: 'google-github-actions/auth@v0'
       #   with:
-      #     credentials_json: '${{ secrets.GCP_CREDENTIALS }}''
+      #     credentials_json: '${{ secrets.GCP_SA_KEY  }}''
 
       # BEGIN - Docker auth and build (NOTE: If you already have a container image, these Docker steps can be omitted)
 
