--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "amc-aggregator-backend",
+  "name": "cmc-aggregator-backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -20,11 +20,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
+    "axios": "^1.6.7",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
